--- a/platforms/android/assets/www/css/panel.css
+++ b/platforms/android/assets/www/css/panel.css
@@ -1,39 +1,41 @@
 .controlPanel {
-
     opacity: 0.6;
-
     position: absolute;
-
     z-index: 9999;
-
     margin-left: 0px;
-
     margin-top: 67px;
-
     margin-right: 0px;
-
     margin-bottom: 0px;
-
     font-family: inherit;
-
     background-color: rgba(95, 101, 103, 0.0);
-
     border: 0px solid darkgray;
-
     border-radius: 0px 10px 10px 0px;
-
     box-shadow: 0px 0px 0px rgba(32, 64, 128, 0.0);
-
     float: left;
-
     width: 74px;
-
     height: 300px;
-
     transition: background-color 1s;
-
     transition: opacity 1s;
+}
 
+.toolsselPanel {
+    opacity: 0.6;
+    position: absolute;
+    z-index: 9999;
+    margin-left: 0px;
+    margin-top: 20px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    font-family: inherit;
+    background-color: rgba(95, 101, 103, 0.0);
+    border: 0px solid darkgray;
+    border-radius: 0px 10px 10px 0px;
+    box-shadow: 0px 0px 0px rgba(32, 64, 128, 0.0);
+    float: left;
+    width: 74px;
+    height: 300px;
+    transition: background-color 1s;
+    transition: opacity 1s;
 }
 
 .controlPanel:hover {
@@ -156,6 +158,36 @@
 
 .imageBtnItemActive {
     background: url('../img/google-images-64.png') no-repeat;
+    border: 0px solid white;
+    border-radius: 5px;
+    margin-left: 4px;
+    margin-top: 4px;
+    width: 64px;
+    height: 64px;
+    cursor: pointer;
+}
+.toolsBtnItemInactive {
+    background: url('../img/support-64.png') no-repeat;
+    border: 0px solid black;
+    border-radius: 5px;
+    margin-left: 4px;
+    margin-top: 4px;
+    width: 64px;
+    height: 64px;
+    cursor: pointer;
+    transition: border 1s;
+}
+
+.toolsBtnItemInactive:active {
+    border: 0px solid white;
+}
+
+.toolsBtnItemInactive:hover {
+    border: 0px solid white;
+}
+
+.toolsBtnItemActive {
+    background: url('../img/support-64.png') no-repeat;
     border: 0px solid white;
     border-radius: 5px;
     margin-left: 4px;
